Поле "метаданные" для логинов/паролей и банковских карт. Документация
