# internal/server/application/use_cases/get_all_credentials.go
@@ -18,27 +18,32 @@ type GetAllCredentials struct {
 }
 
 // Do - Вызов исполнения сценария использования, возвращает слайс расшифрованных логинов и паролей
-func (u GetAllCredentials) Do(userID uuid.UUID) ([]domain.Credentials, error) {
+func (u GetAllCredentials) Do(userID uuid.UUID) ([]*domain.Credentials, error) {
 	creds, err := u.CredentialsRepository.GetAll(userID)
 	if err != nil {
-		return []domain.Credentials{}, err
+		return []*domain.Credentials{}, err
 	}
 	for i, v := range creds {
 		decryptedName, err := u.Crypto.Decrypt(v.Name)
 		if err != nil {
-			return []domain.Credentials{}, err
+			return []*domain.Credentials{}, err
 		}
 		decryptedLogin, err := u.Crypto.Decrypt(v.Login)
 		if err != nil {
-			return []domain.Credentials{}, err
+			return []*domain.Credentials{}, err
 		}
 		decryptedPassword, err := u.Crypto.Decrypt(v.Password)
 		if err != nil {
-			return []domain.Credentials{}, err
+			return []*domain.Credentials{}, err
+		}
+		decryptedMeta, err := u.Crypto.Decrypt(v.Meta)
+		if err != nil {
+			return []*domain.Credentials{}, err
 		}
 		v.Name = decryptedName
 		v.Login = decryptedLogin
 		v.Password = decryptedPassword
+		v.Meta = decryptedMeta
 		creds[i] = v
 	}
 
